--- a/assets/css/admin/main.css
+++ b/assets/css/admin/main.css
@@ -74,18 +74,23 @@
 
 /* media grid icon */
 
-.pvtmed-thumbnail {
-  position: relative;
+.thumbnail .centered {
+  position: relative !important;
+  transform: none !important;
+
+  display: flex;
+  justify-content: center;
 }
 
-.pvtmed-thumbnail img {
+.thumbnail .centered img {
   display: block;
+  transform: none !important;
 }
 
-.pvtmed-thumbnail span {
+.thumbnail .centered span {
   position: absolute;
   width: 10px;
   height: 10px;
-  bottom: 0;
+  bottom: 15px;
   left: 0;
 }
